Software/ConsoleThread/QuickUSB.h

// QuickUSB Timer register addresses
#define TIMER_TCON				0
#define TIMER_TMOD				1
#define TIMER_T0					2
#define TIMER_T1					3
#define TIMER_CKCON				4
#define TIMER_IE					5
#define TIMER_T2CON				6
#define TIMER_RCAP2				7
#define TIMER_T2					8
#define TIMER_PORTACFG			9
#define TIMER_PORTECFG			10
/*- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  QuickUSB Error Codes
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -*/
#define QUICKUSB_ERROR_NO_ERROR              0
#define QUICKUSB_ERROR_OUT_OF_MEMORY         1
#define QUICKUSB_ERROR_CANNOT_OPEN_MODULE    2
#define QUICKUSB_ERROR_CANNOT_FIND_DEVICE    3
#define QUICKUSB_ERROR_IOCTL_FAILED          4
#define QUICKUSB_ERROR_INVALID_PARAMETER     5
#define QUICKUSB_ERROR_TIMEOUT               6
extern int WINAPI QuickUsbOpen(HANDLE *hDevice, char *deviceName);
extern int WINAPI QuickUsbClose(HANDLE hDevice);
extern int WINAPI QuickUsbReadSetting(HANDLE hDevice, 
                                      unsigned short address, 
                                      unsigned short *value);
extern int WINAPI QuickUsbWriteSetting(HANDLE hDevice,
                                       unsigned short address, 
                                       unsigned short value);
extern int WINAPI QuickUsbReadI2C(HANDLE hDevice, 
                                  unsigned short address, 
                                  unsigned char *data, 
                                  unsigned short *length);
extern int WINAPI QuickUsbWriteI2C(HANDLE hDevice, 
                                   unsigned short address, 
                                   unsigned char *data,
                                   unsigned short length);
extern int WINAPI QuickUsbReadTimerReg(HANDLE hDevice, 
                                       unsigned short address, 
                                       unsigned short *data);
extern int WINAPI QuickUsbWriteTimerReg(HANDLE hDevice, 
                                        unsigned short address, 
                                        unsigned short data);
extern int WINAPI QuickUsbReadTimerIsrRegs(HANDLE hDevice, 
                                           unsigned short *data, 
                                           unsigned short *length);
extern int WINAPI QuickUsbSetTimeout(HANDLE hDevice,
                                   unsigned long timeOut);
extern int WINAPI QuickUsbGetDriverVersion(unsigned short MajorDriverVersion,
                                           unsigned short MinorDriverVersion,
                                           unsigned short BuildDriverVersion);
extern int WINAPI QuickUsbGetDllVersion(unsigned short MajorDllVersion,
                                        unsigned short MinorDllVersion,
                                        unsigned short BuildDllVersion);
////////////////////////TEST CODE///////////////////////////
extern int WINAPI QuickUsbWriteDataAsync(HANDLE hDevice, unsigned char *data, 
                             unsigned long length, unsigned char *transaction);
extern int WINAPI QuickUsbReadDataAsync(HANDLE hDevice, unsigned char *data, 
                             unsigned long *length, unsigned char *transaction);
extern int WINAPI QuickUsbAsyncWait(HANDLE hDevice, unsigned long *bytecount,
                             unsigned char transaction);