Software/QuickUsbVb6App/Template Files/QuickUSB.bas


'=============================================================================
' QuickUSB I2C Port Functions
'=============================================================================
Declare Function QuickUsbReadI2C Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByRef length As Integer) As Long
Declare Function QuickUsbWriteI2C Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, _
   Data As Any, ByVal length As Integer) As Long

'=============================================================================
' QuickUSB Timer Functions
'=============================================================================
Const TIMER_TCON As Integer = 0
Const TIMER_TMOD As Integer = 1
Const TIMER_T0 As Integer = 2
Const TIMER_T1 As Integer = 3
Const TIMER_CKCON As Integer = 4
Const TIMER_IE As Integer = 5
Const TIMER_T2CON As Integer = 6
Const TIMER_RCAP2 As Integer = 7
Const TIMER_T2 As Integer = 8
Const TIMER_PORTACFG As Integer = 9
Const TIMER_PORTECFG As Integer = 10

Declare Function QuickUsbReadTimerReg Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, ByRef Value As Integer) As Long
Declare Function QuickUsbWriteTimerReg Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal address As Integer, ByVal Value As Integer) As Long
Declare Function QuickUsbReadTimerIsrRegs Lib "QuickUsb" _
   (ByVal hDevice As Long, Data As Any, ByRef length As Integer) As Long

Declare Function QuickUsbGetDllVersion Lib "QuickUsb" _
   (ByRef major As Integer, ByRef minor As Integer, ByRef revision As Integer) As Long
Declare Function QuickUsbGetDriverVersion Lib "QuickUsb" _
   (ByRef major As Integer, ByRef minor As Integer, ByRef revision As Integer) As Long
   
Declare Function QuickUsbSetTimeout Lib "QuickUsb" _
   (ByVal hDevice As Long, ByVal Timeout As Long) As Long

'=============================================================================
' Asynchronous I/O Functions
'=============================================================================
Declare Function QuickUsbReadDataAsync Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef Data As Any, ByRef length As Long, ByRef transaction As Byte) As Long
Declare Function QuickUsbWriteDataAsync Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef Data As Any, ByVal length As Long, ByRef transaction As Byte) As Long
Declare Function QuickUsbAsyncWait Lib "QuickUsb" _
   (ByVal hDevice As Long, ByRef length As Long, ByVal transaction As Byte, ByVal immediate As Byte) As Long


Public Function QuickUsbErrorString(errorCode As Long) As String
   Select Case errorCode
   Case QUICKUSB_ERROR_NO_ERROR
      QuickUsbErrorString = "No Error"
   Case QUICKUSB_ERROR_OUT_OF_MEMORY
      QuickUsbErrorString = "Out of memory"
   Case QUICKUSB_ERROR_CANNOT_OPEN_MODULE
      QuickUsbErrorString = "Cannot open module"
   Case QUICKUSB_ERROR_CANNOT_FIND_DEVICE
      QuickUsbErrorString = "Cannot find module"
   Case QUICKUSB_ERROR_IOCTL_FAILED
      QuickUsbErrorString = "Call to QuickUSB driver failed"
   Case QUICKUSB_ERROR_INVALID_PARAMETER
      QuickUsbErrorString = "Invalid parameter"
   Case QUICKUSB_ERROR_TIMEOUT
      QuickUsbErrorString = "I/O timeout"
   Case QUICKUSB_ERROR_FUNCTION_NOT_SUPPORTED
      QuickUsbErrorString = "Function not supported"
   End Select
End Function


'=============================================================================
' General Purpose Functions
'=============================================================================
Public Function Min(X As Variant, Y As Variant) As Variant
   If (X < Y) Then
      Min = X
   Else
      Min = Y
   End If
End Function


Public Function Max(X As Variant, Y As Variant) As Variant
   If (X > Y) Then
      Max = X
   Else
      Max = Y
   End If
End Function


Public Function asHex(theData As Variant, length As Variant) As String
   Const digits As String = "0123456789ABCDEF"
   Dim pow2 As Variant
   Dim digit As Variant
   Dim tempStr As String
      
   pow2 = Array( _
      &H1, &H2, &H4, &H8, _
      &H10, &H20, &H40, &H80, _
      &H100, &H200, &H400, &H800, _
      &H1000, &H2000, &H4000, &H8000, _
      &H10000, &H20000, &H40000, &H80000, _
      &H100000, &H200000, &H400000, &H800000 _
   )
   For digit = length - 1 To 0 Step -1
      tempStr = tempStr & Mid(digits, ((theData \ pow2(digit * 4)) And &HF) + 1, 1)
   Next
   asHex = tempStr
End Function



Function ByteArrayToString(theData() As Byte) As String
   Dim count As Integer
   Dim theString As String
   
   For count = 0 To UBound(theData) - 1
      theString = theString & "&h" & asHex(theData(count), 2) & " "
   Next
   ByteArrayToString = theString
End Function



Function StringToByteArray(theData() As Byte, theString As String) As Integer
   Dim dataIndex As Integer
   Dim startStrIndex As Long
   Dim endStrIndex As Integer
   Dim strlen As Integer
   
   ' Exit for an empty string
   If (Len(theString) = 0) Then
      StringToByteArray = 0
      Exit Function
   End If
   
   ' Allocate space for the data
   ReDim theData(Len(theString))         ' Guess that the data length is the maximum
   
   ' Parse text and put it into the array
   dataIndex = 0
   startStrIndex = 1
   strlen = Len(theString)
   Do While (startStrIndex <= strlen)
      ' Find the first non-space
      Do While (Mid(theString, startStrIndex, 1) = " " And startStrIndex <= strlen)
         startStrIndex = startStrIndex + 1
      Loop
      
      ' Find the first space
      endStrIndex = startStrIndex
      Do While (Mid(theString, endStrIndex, 1) <> " " And endStrIndex <= strlen)
         endStrIndex = endStrIndex + 1
      Loop
      
      ' Get the text
      theData(dataIndex) = CByte(Val(Mid(theString, startStrIndex, endStrIndex - startStrIndex)) And &HFF)
      dataIndex = dataIndex + 1
      startStrIndex = endStrIndex
   Loop
   
   ' Resize the data to the right length
   ReDim Preserve theData(dataIndex - 1)
   
   ' Return the actual length
   StringToByteArray = dataIndex
End Function



Public Sub WriteSetting(devName As String, settingNum As Integer, theValue As Integer)
   Dim hDevice As Long
   Dim result As Long
   
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open Device:" & devName
      Exit Sub
   End If
   
   result = QuickUsbWriteSetting(hDevice, settingNum, theValue)

   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the transaction result
   If (result = 0) Then
      MsgBox "Cannot write setting"
      Exit Sub
   End If
   
End Sub



Public Sub ReadSetting(devName As String, settingNum As Integer, ByRef theValue As Integer)
   Dim hDevice As Long
   Dim result As Long
   
   ' Open the device
   result = QuickUsbOpen(hDevice, devName)
   If (result = 0) Then
      MsgBox "Cannot open Device:" & devName
      Exit Sub
   End If
   
   result = QuickUsbReadSetting(hDevice, settingNum, theValue)

   ' Close the device when you're done
   QuickUsbClose hDevice
   
   ' Check the transaction result
   If (result = 0) Then
      MsgBox "Cannot write setting"
      Exit Sub
   End If
   
End Sub




